[tool.poetry]
name = "md2api"
version = "0.2.0"
description = ""
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"

[tool.poetry.scripts]
md2api = 'md2api.run:main'

[tool.poetry.dependencies]
python = "^3.9"
markdown = "^3.3.4"
GitPython = "^3.1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
